--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,11 +1,241 @@
-@import 'vars';
-@import 'fonts';
-@import 'reset';
-@import 'global';
-@import 'libs';
+@import "vars";
+@import "fonts";
+@import "reset";
+@import "global";
+@import "libs";
 
+.header {
+  color: #fff;
+  background: url(../images/header-bg.jpg) center no-repeat;
+  padding: 30px 0 75px;
+  &__top-inner {
+    max-width: 1200px;
+    padding: 0 15px;
+    margin: 0 auto 75px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  &__address,
+  &__contacts {
+    max-width: 250px;
+  }
+  &__hours {
+    max-width: 200px;
+  }
+  &__title {
+    max-width: 850px;
+    margin: 0 auto 50px;
+    font-size: 32px;
+    text-align: center;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    span {
+      display: block;
+      font-size: 20px;
+    }
+  }
+  &__content-bottom {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    p {
+      position: relative;
+      max-width: 240px;
+      text-align: center;
+      &:before {
+        content: "";
+        position: absolute;
+        top: -90px;
+        left: 80px;
+        width: 80px;
+        height: 80px;
+      }
+    }
+  }
+  &__content-warranty:before {
+    background: url(../images/garanty.png) no-repeat;
+  }
+  &__content-price:before {
+    background: url(../images/price.png) no-repeat;
+  }
+}
 
+.about {
+  background: url(../images/about-bg.png) 50% 0 no-repeat;
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  &__item {
+    max-width: 265px;
+    text-align: center;
+    margin-bottom: 50px;
+    img {
+      margin: 0 auto 15px;
+      transition: transform 0.4s;
+    }
+    &:hover img {
+      transform: translateY(-15px);
+      transition: transform 0.4s;
+    }
+  }
+  &__subtitle {
+    font-size: 24px;
+    margin-bottom: 15px;
+  }
+  &__description {
+    font-size: 20px;
+  }
+}
 
+.services {
+  padding-bottom: 30px;
+  color: #fff;
+  background: url(../images/services-bg.jpg);
+  &__list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  &__item {
+    max-width: 306px;
+    width: 100%;
+    margin-bottom: 50px;
+  }
+  &__subtitle {
+    padding: 30px 0;
+    background-color: #33a6e7;
+    font-size: 22px;
+    text-align: center;
+  }
+}
 
+.faq {
+  padding-bottom: 130px;
+  &__title {
+    text-align: left;
+    span {
+      display: block;
+      margin-top: 25px;
+      font-weight: 400;
+      font-size: 20px;
+    }
+  }
+  &__item {
+    margin-bottom: 25px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.7);
+  }
+  &__question {
+    font-size: 22px;
+    position: relative;
+    font-weight: 700;
+    margin-bottom: 20px;
+    &:after {
+      content: "";
+      position: absolute;
+      background-image: url(../images/arrow-down.png);
+      top: 0;
+      right: 0;
+      width: 25px;
+      height: 25px;
+      transition: transform 0.4s;
+    }
+  }
+  &__question.active {
+    &:after {
+      transform: rotate(180deg);
+      transition: transform 0.4s;
+    }
+  }
+  &__answer {
+    font-size: 22px;
+    margin-bottom: 10px;
+  }
+}
 
-@import 'media';
+.consult {
+  background: url(../images/services-bg.jpg);
+  color: #fff;
+  &__form {
+    margin: 0 auto;
+    max-width: 400px;
+    padding: 40px 20px;
+    background: rgba(7, 7, 7, 0.5);
+    border-radius: 30px;
+    input {
+      padding: 20px 0 20px 20px;
+      margin-bottom: 30px;
+      max-width: 365px;
+      width: 100%;
+      background: rgba(196, 196, 196, 0.3);
+      border: 1px solid #ffffff;
+      border-radius: 10px;
+      color: #fff;
+      font-size: 20px;
+      &::placeholder {
+        font-size: 20px;
+        color: #fff;
+      }
+    }
+  }
+  &__comment {
+    font-size: 17px;
+    margin-bottom: 30px;
+  }
+  &__btn {
+    display: block;
+    margin: 0 auto;
+    padding: 22px 15px;
+    background: #33a6e7;
+    color: #fff;
+    font-weight: 700;
+  }
+}
+
+.map {
+  padding: 0;
+  &__inner{
+    position: relative;
+  }
+  &__text{
+    padding: 15px;
+    position: absolute;
+    top: 40%;
+    background-color: rgba(153, 21, 21, 0.75);
+    color: #fff;
+  }
+}
+
+.footer{
+  padding: 90px 0;
+  background: url(../images/header-bg.jpg) center/cover;
+  color: #fff;
+  &__list{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  &__item{
+    font-size: 20px;
+    font-weight: 700;
+    span{
+      display: block;
+      margin-bottom: 15px;
+    }
+    a{
+      display: inline-block;
+      margin-bottom: 15px;
+    }
+    &:first-child{
+      max-width: 400px;
+      width: 100%;
+    }
+    &:last-child{
+      max-width: 300px;
+      width: 100%;
+    }
+  }
+}
+
+@import "media";
